--- a/Joseph_Valentine_love.ipynb
+++ b/Joseph_Valentine_love.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPev2aiH/xh1PB+QArHPTmk",
+      "authorship_tag": "ABX9TyPR8fsuBcf01JltIqSDvzN8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,81 +29,43 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np \n",
+        "import numpy as np # Importing numpy library\n",
+        "import matplotlib.pyplot as plt # Importing matplotlib library\n",
         "\n",
-        "# Importing numpy library\n",
-        "import matplotlib.pyplot as plt \n",
+        "x = np.linspace(-2, 2, 201) # Creating an array of values between -2 and 2 with 201 elements\n",
+        "y = np.linspace(-2.0, 2.0, 201) # Creating an array of values between -2.0 and 2.0 with 201 elements\n",
         "\n",
-        "# Importing matplotlib library\n",
-        "x = np.linspace(-2, 2, 201) \n",
+        "X, Y = np.meshgrid(x, y) # Creating a mesh grid using x and y arrays\n",
+        "eq = np.power(X, 2) + np.power(Y - np.cbrt(np.power(X, 2)), 2) - 1 # Calculating equation for plotting\n",
         "\n",
-        "# Creating an array of values between -2 and 2 with 201 elements\n",
-        "y = np.linspace(-2.0, 2.0, 201) \n",
+        "plt.contour(X, Y, eq, levels=np.arange(-1, 1, 0.001), colors=\"red\") # Plotting contour with levels between -1 and 1 with step size 0.001 and color red\n",
+        "plt.arrow(-1, -0.5, 2.5, 2, width=0.05) # Adding an arrow to the plot\n",
+        "plt.text(-1.75, -0.75, 'Joseph') # Adding text to the plot\n",
+        "plt.text(1.5, 1.75, 'You') # Adding text to the plot\n",
         "\n",
-        "# Creating an array of values between -2.0 and 2.0 with 201 elements\n",
-        "X, Y = np.meshgrid(x, y) \n",
+        "plt.xlabel('X') # Setting x-axis label\n",
+        "plt.xlim(-3, 3) # Setting x-axis limits\n",
+        "plt.ylabel('Y') # Setting y-axis label\n",
+        "plt.ylim(-3, 3) # Setting y-axis limits\n",
         "\n",
-        "# Creating a mesh grid using x and y arrays\n",
-        "eq = np.power(X, 2) + np.power(Y - np.cbrt(np.power(X, 2)), 2) - 1 \n",
+        "plt.grid(True, linestyle='--', linewidth=0.5, color='gray') # Adding grid to the plot\n",
+        "plt.title('Happy Valentine from Joseph', fontsize=16) # Setting plot title and font size\n",
+        "plt.tight_layout() # Adjusting plot layout to prevent overlapping of elements\n",
+        "plt.show() # Showing the plot\n",
         "\n",
-        "# Calculating equation for plotting\n",
-        "plt.contour(X, Y, eq, levels=np.arange(-1, 1, 0.001), colors=\"red\") \n",
-        "\n",
-        "# Plotting contour with levels between -1 and 1 with step size 0.001 and color red\n",
-        "plt.arrow(-1, -0.5, 2.5, 2, width=0.05) \n",
-        "\n",
-        "# Adding an arrow to the plot\n",
-        "plt.text(-1.75, -0.75, 'Joseph') \n",
-        "\n",
-        "# Adding text to the plot\n",
-        "plt.text(1.5, 1.75, 'You') \n",
-        "\n",
-        "# Adding text to the plot\n",
-        "plt.xlabel('X') \n",
-        "\n",
-        "# Setting x-axis label\n",
-        "plt.xlim(-3, 3) \n",
-        "\n",
-        "# Setting x-axis limits\n",
-        "plt.ylabel('Y') \n",
-        "\n",
-        "# Setting y-axis label\n",
-        "plt.ylim(-3, 3) \n",
-        "\n",
-        "# Setting y-axis limits\n",
-        "plt.grid(True, linestyle='--', linewidth=0.5, color='gray') \n",
-        "\n",
-        "# Adding grid to the plot\n",
-        "plt.title('Happy Valentine from Joseph', fontsize=16) \n",
-        "\n",
-        "# Setting plot title and font size\n",
-        "plt.tight_layout() \n",
-        "\n",
-        "# Adjusting plot layout to prevent overlapping of elements\n",
-        "plt.show() \n",
-        "\n",
-        "# Showing the plot\n",
-        "plt.clf() \n",
-        "\n",
-        "# Clearing current figure\n",
-        "plt.cla() \n",
-        "\n",
-        "# Clearing current axis\n",
-        "plt.close() \n",
-        "\n",
-        "# Closing the plot\n",
-        "\n",
-        "\n"
+        "plt.clf() # Clearing current figure\n",
+        "plt.cla() # Clearing current axis\n",
+        "plt.close() # Closing the plot\n"
       ],
       "metadata": {
+        "id": "U9079njMSdls",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "id": "QMpS_g6TPWqo",
-        "outputId": "cd94d535-6a62-4124-b44c-f0790e72796e"
+        "outputId": "703603ad-0644-4787-fd91-3c8ff0356dde"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
